--- a/style.css
+++ b/style.css
@@ -18,3 +18,19 @@
     word-spacing: 30px;
     letter-spacing: 20px;
 }
+.article , #tiger-types{
+    margin: 50px auto;
+    width: 80%;
+    background-color: blanchedalmond;
+    padding: 60px;
+}
+.article h2 {
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 10px;
+    padding-bottom:60px ;
+}
+.article p {
+    font-size: 20px;
+   
+}
