--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@
     background-image: url('../conceptual-session1/images/bengal-tiger.jpg');
     height: 100vh;
     background-size: cover;
+    clip-path: polygon(0 0, 100% 0, 100% 81%, 51% 100%, 48% 100%, 0 81%);
+
 }
  .hero h1{
-    font-size: 100px;
+    font-size: 80px;
     text-align: center;
     color: blanchedalmond;
     font-weight: 800;
@@ -21,16 +23,26 @@
 .article , #tiger-types{
     margin: 50px auto;
     width: 80%;
-    background-color: blanchedalmond;
+    background: linear-gradient(45deg, blanchedalmond, grey, green) ;
     padding: 60px;
 }
-.article h2 {
+.article h2, #tiger-types h3{
     text-align: center;
     font-size: 48px;
     margin-bottom: 10px;
     padding-bottom:60px ;
+  color:  blanchedalmond;
 }
 .article p {
     font-size: 20px;
    
 }
+
+.tiger-images {
+   display: flex;
+   
+   gap: 15px;
+}
+.tiger-images  {
+    min-width: 300px;
+ }
